--- a/object.html
+++ b/object.html
@@ -45,5 +45,15 @@
     const teacher1 = new Teacher('franc', 'frotend', 'weekdays')
     const teacher2 = new Teacher('caleb', 'product design', 'weekends')
 
+    function Student(name, course, grade){
+        this.name = name;
+        this.course = course;
+        this.grade = grade;
+    }
+
+    const student1 = new Student('ben', 'math', 'A+')
+    const student2 = new Student('anita', 'physics', 'A-')
+    const student3 = new Student('amahdou', 'chemistry', 'C+')
+
 </script>
 </html>
